--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '* * * * *' # At 00:00
+    - cron: '0 1 * * *' # At 00:00
   workflow_dispatch:
 
 
