--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,7 @@ name: run main.py
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' # At 00:00
+    - cron: '* * * * *' # At 00:00
 
 
 
