--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,3 +43,5 @@ jobs:
           PORT: ${{ secrets.PORT}}
           TARGET_EMAIL: ${{ secrets.TARGET_EMAIL}}
         run: python quote_mailer/main.py
+      - name: execute rain_alert script
+        run: python rain_alert/rain_alert.py
