--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,5 +46,9 @@ jobs:
 
       - name: execute rain_alert script
         run: python rain_alert/rain_alert.py
+      
+      
+      - name: execute est1.py
+        run: python EST/ESTI.py
 
       
