--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,9 @@
 name: Run Scripts
 
 on:
-  workflow_dispatch: # Allows manual triggering of the workflow
+  workflow_dispatch:
   schedule:
-    - cron: '2 22 * * *' # At 22:02 UTC every day
+    - cron: '2 22 * * *'
 
 jobs:
   build:
@@ -11,48 +11,53 @@ jobs:
 
     steps:
       - name: Checkout repository content
-        uses: actions/checkout@v2 # Checkout the repository content to GitHub runner
+        uses: actions/checkout@v2
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # Specify the Python version needed
+          python-version: '3.10'
 
       - name: Install Chrome and ChromeDriver
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium-browser
-          sudo apt-get install -y chromium-chromedriver
-          # Check if the symlink already exists and create it if not
-          if [ ! -f /usr/bin/google-chrome ]; then
-            sudo ln -s /usr/bin/chromium-browser /usr/bin/google-chrome
-          fi
+          sudo apt-get install -y wget
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install ./google-chrome-stable_current_amd64.deb
+          sudo apt-get install -y xvfb # Install virtual display (useful for running headless)
+          sudo apt-get install -y unzip
+          # Install ChromeDriver
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
 
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Execute birthday_wisher script # Run birthday_wisher/main.py
+      - name: Execute birthday_wisher script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
           MY_PASS: ${{ secrets.MY_PASS }}
           SMTP: ${{ secrets.SMTP }}
           PORT: ${{ secrets.PORT }}
-          PHONE: ${{ secrets.PHONE }} # Added PHONE env
+          PHONE: ${{ secrets.PHONE }}
         run: python birthday_wisher/main.py
 
-      - name: Execute quotes_mailer script # Run quote_mailer/main.py
+      - name: Execute quotes_mailer script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
           MY_PASS: ${{ secrets.MY_PASS }}
           SMTP: ${{ secrets.SMTP }}
           PORT: ${{ secrets.PORT }}
-          PHONE: ${{ secrets.PHONE }} # Added PHONE env
+          PHONE: ${{ secrets.PHONE }}
           TARGET_EMAIL: ${{ secrets.TARGET_EMAIL }}
         run: python quote_mailer/main.py
 
-      - name: Execute rain_alert script # Run rain_alert/rain_alert.py
+      - name: Execute rain_alert script
         env:
-          PHONE: ${{ secrets.PHONE }} # Added PHONE env
+          PHONE: ${{ secrets.PHONE }}
         run: python rain_alert/rain_alert.py
