--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,21 +3,24 @@ name: Run Scripts
 on:
   workflow_dispatch:
   schedule:
-    - cron: '2 22 * * *'
+    - cron: '2 22 * * *'  # Runs at 22:02 (UTC) every day
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the repository content
       - name: Checkout repository content
         uses: actions/checkout@v2
 
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
+      # Install Chrome and ChromeDriver
       - name: Install Chrome and ChromeDriver
         run: |
           sudo apt-get update
@@ -31,7 +34,7 @@ jobs:
           MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d'.' -f1)
           
           # Get the correct ChromeDriver version for the installed Chrome
-          LATEST_DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE_$MAJOR_VERSION)
+          LATEST_DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$MAJOR_VERSION)
           
           # Download and set up ChromeDriver
           wget https://chromedriver.storage.googleapis.com/${LATEST_DRIVER_VERSION}/chromedriver_linux64.zip
@@ -39,11 +42,13 @@ jobs:
           sudo mv chromedriver /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
 
+      # Install Python packages from requirements.txt
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Execute the birthday_wisher script
       - name: Execute birthday_wisher script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
@@ -53,6 +58,7 @@ jobs:
           PHONE: ${{ secrets.PHONE }}
         run: python birthday_wisher/main.py
 
+      # Execute the quotes_mailer script
       - name: Execute quotes_mailer script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
@@ -63,6 +69,7 @@ jobs:
           TARGET_EMAIL: ${{ secrets.TARGET_EMAIL }}
         run: python quote_mailer/main.py
 
+      # Execute the rain_alert script
       - name: Execute rain_alert script
         env:
           PHONE: ${{ secrets.PHONE }}
