--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,7 @@ name: Run Scripts
 on:
   workflow_dispatch:
   schedule:
-    - cron: '2 22 * * *'  # Runs at 22:02 (UTC) every day
+    - cron: '2 22 * * *'
 
 jobs:
   build:
@@ -14,41 +14,28 @@ jobs:
       - name: Checkout repository content
         uses: actions/checkout@v2
 
-      # Set up Python
-      - name: Set up Python
+      # Install Chrome
+      - name: Install Google Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget gnupg2
+          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+      # Install Python and Python packages
+      - name: Set up Python and Install dependencies
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # Install Chrome and ChromeDriver
-      - name: Install Chrome and ChromeDriver
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install ./google-chrome-stable_current_amd64.deb
-          sudo apt-get install -y xvfb unzip
-          
-          # Get Chrome version and determine the matching ChromeDriver version
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -1)
-          MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d'.' -f1)
-          
-          # Get the correct ChromeDriver version for the installed Chrome
-          LATEST_DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$MAJOR_VERSION)
-          
-          # Download and set up ChromeDriver
-          wget https://chromedriver.storage.googleapis.com/${LATEST_DRIVER_VERSION}/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-
-      # Install Python packages from requirements.txt
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Execute the birthday_wisher script
+      # Execute birthday_wisher script
       - name: Execute birthday_wisher script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
@@ -58,7 +45,7 @@ jobs:
           PHONE: ${{ secrets.PHONE }}
         run: python birthday_wisher/main.py
 
-      # Execute the quotes_mailer script
+      # Execute quotes_mailer script
       - name: Execute quotes_mailer script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
@@ -69,7 +56,7 @@ jobs:
           TARGET_EMAIL: ${{ secrets.TARGET_EMAIL }}
         run: python quote_mailer/main.py
 
-      # Execute the rain_alert script
+      # Execute rain_alert script
       - name: Execute rain_alert script
         env:
           PHONE: ${{ secrets.PHONE }}
