--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,11 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository content
       - name: Checkout repository content
         uses: actions/checkout@v2
 
-      # Install Chrome
       - name: Install Google Chrome
         run: |
           sudo apt-get update
@@ -24,18 +22,28 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
-      # Install Python and Python packages
-      - name: Set up Python and Install dependencies
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+      - name: Check Chrome Version
+        run: google-chrome --version
+
+      - name: Install ChromeDriver
+        run: |
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -1)
+          MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d'.' -f1)
+
+          # Fetch the correct ChromeDriver version for the installed Chrome
+          LATEST_DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE_$MAJOR_VERSION)
+
+          # Download and set up ChromeDriver
+          wget https://chromedriver.storage.googleapis.com/${LATEST_DRIVER_VERSION}/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
 
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Execute birthday_wisher script
       - name: Execute birthday_wisher script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
@@ -45,7 +53,6 @@ jobs:
           PHONE: ${{ secrets.PHONE }}
         run: python birthday_wisher/main.py
 
-      # Execute quotes_mailer script
       - name: Execute quotes_mailer script
         env:
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
@@ -56,7 +63,6 @@ jobs:
           TARGET_EMAIL: ${{ secrets.TARGET_EMAIL }}
         run: python quote_mailer/main.py
 
-      # Execute rain_alert script
       - name: Execute rain_alert script
         env:
           PHONE: ${{ secrets.PHONE }}
