--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,14 +27,23 @@ jobs:
 
       - name: Install ChromeDriver
         run: |
+          # Get the installed Chrome version
           CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -1)
+
+          # Extract the major version
           MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d'.' -f1)
 
           # Fetch the correct ChromeDriver version for the installed Chrome
-          LATEST_DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE_$MAJOR_VERSION)
+          LATEST_DRIVER_VERSION=$(curl -sS "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$MAJOR_VERSION")
+
+          # Check if the driver version is retrieved successfully
+          if [ -z "$LATEST_DRIVER_VERSION" ]; then
+            echo "Error: Could not fetch ChromeDriver version for Chrome $CHROME_VERSION"
+            exit 1
+          fi
 
           # Download and set up ChromeDriver
-          wget https://chromedriver.storage.googleapis.com/${LATEST_DRIVER_VERSION}/chromedriver_linux64.zip
+          wget "https://chromedriver.storage.googleapis.com/${LATEST_DRIVER_VERSION}/chromedriver_linux64.zip"
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
