--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,26 +22,30 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
-      - name: Check Chrome Version
-        run: google-chrome --version
+      - name: Get Chrome Version
+        id: chrome_version
+        run: |
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -1)
+          echo "Chrome version: $CHROME_VERSION"
+          echo "::set-output name=version::$CHROME_VERSION"
 
       - name: Install ChromeDriver
         run: |
-          # Get the installed Chrome version
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -1)
-
-          # Extract the major version
-          MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d'.' -f1)
-
-          # Fetch the correct ChromeDriver version for the installed Chrome
+          # Get the major version from the output of the previous step
+          MAJOR_VERSION=$(echo "${{ steps.chrome_version.outputs.version }}" | cut -d'.' -f1)
+          
+          # Fetch the latest ChromeDriver version for the installed Chrome
           LATEST_DRIVER_VERSION=$(curl -sS "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$MAJOR_VERSION")
-
+          
+          # Debug output for the driver version
+          echo "Latest ChromeDriver version for Chrome $MAJOR_VERSION: $LATEST_DRIVER_VERSION"
+          
           # Check if the driver version is retrieved successfully
           if [ -z "$LATEST_DRIVER_VERSION" ]; then
-            echo "Error: Could not fetch ChromeDriver version for Chrome $CHROME_VERSION"
+            echo "Error: Could not fetch ChromeDriver version for Chrome $MAJOR_VERSION"
             exit 1
           fi
-
+          
           # Download and set up ChromeDriver
           wget "https://chromedriver.storage.googleapis.com/${LATEST_DRIVER_VERSION}/chromedriver_linux64.zip"
           unzip chromedriver_linux64.zip
