--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,20 +26,15 @@ jobs:
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get install -f
           google-chrome --version
 
-      - name: Install ChromeDriver
-        run: |
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-          wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/bin/chromedriver
-          sudo chown root:root /usr/bin/chromedriver
-          sudo chmod +x /usr/bin/chromedriver
-          chromedriver --version
-
-      - name: Install Python packages
+      - name: Install Python packages and ChromeDriver Auto-Installer
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install chromedriver-autoinstaller
+
+      - name: Automatically Update ChromeDriver
+        run: |
+          python -c "import chromedriver_autoinstaller; chromedriver_autoinstaller.install()"
 
       - name: Execute rain_alert script
         env:
